feat: added Stockfish functions