@@ -3,11 +3,13 @@ package com.xchess;
 import com.xchess.config.StockfishConfig;
 import com.xchess.option.StockfishOptions;
 import com.xchess.process.ProcessWrapper;
+import com.xchess.validators.MoveValidator;
+import com.xchess.validators.SquareValidator;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Optional;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class Stockfish {
     private final ProcessWrapper process;
@@ -30,7 +32,6 @@ public class Stockfish {
         this.process.stop();
     }
 
-
     public void setOptions(StockfishOptions options) throws IOException,
             InterruptedException, CloneNotSupportedException {
         this.options = this.options.merge(options);
@@ -42,16 +43,23 @@ public class Stockfish {
         }
     }
 
-    public void moveToStartPosition() throws IOException, InterruptedException {
-        this.process.writeCommand("ucinewgame");
-        this.process.writeCommand("position startpos");
-        this.waitUntilReady();
+    public void setDefaultOptions() throws IOException, InterruptedException,
+            CloneNotSupportedException {
+        this.setOptions(new StockfishOptions().setDefaultOptions());
     }
 
-    public void moveToFen(String fen) throws IOException, InterruptedException {
-        this.process.writeCommand("ucinewgame");
-        this.process.writeCommand("position fen " + fen);
-        this.waitUntilReady();
+    public String getFenPosition() throws IOException, InterruptedException {
+        this.process.writeCommand("d");
+        List<String> lines = this.process.readLinesUntil(Pattern.compile(
+                        "^Checkers.+?$"),
+                this.config.getReadTimeoutInMs());
+        Optional<String> fenLineOptional =
+                lines.stream().filter((line) -> line.startsWith("Fen")).findFirst();
+
+        if (fenLineOptional.isEmpty()) {
+            throw new IOException("Cannot find line containing fen position");
+        }
+        return fenLineOptional.get().substring(5);
     }
 
     public List<String> getPossibleMoves() throws IOException,
@@ -61,7 +69,57 @@ public class Stockfish {
                         "^Nodes searched.+?$"),
                 this.config.getReadTimeoutInMs());
         return lines.stream().filter((line) -> Pattern.matches("^....: 1$",
-                line)).map((line) -> line.split(":")[0]).collect(Collectors.toList());
+                line)).map((line) -> line.split(":")[0]).toList();
+    }
+
+    public List<String> getPossibleMoves(String square) throws IOException,
+            InterruptedException {
+        if (SquareValidator.isSquareSyntaxValid(square)) {
+            throw new IllegalArgumentException("Invalid syntax for square " + square);
+        }
+        return this.getPossibleMoves().stream().filter((move) -> move.startsWith(square)).toList();
+    }
+
+    public boolean isMovePossible(String move) throws IOException,
+            InterruptedException {
+        if (SquareValidator.isSquareSyntaxValid(move)) {
+            throw new IllegalArgumentException("Invalid syntax for move " + move);
+        }
+        return getPossibleMoves().contains(move);
+    }
+
+    public void move(List<String> moves) throws IOException,
+            InterruptedException {
+        String startingPosition = this.getFenPosition();
+        int invalidMoveIndex =
+                moves.stream().map(MoveValidator::isMoveValid).toList().indexOf(false);
+        if (invalidMoveIndex != -1) {
+            throw new IllegalArgumentException("Invalid syntax for move " + moves.get(invalidMoveIndex));
+        }
+        for (String move :
+                moves) {
+            if (this.isMovePossible(move)) {
+                this.process.writeCommand("position fen " + this.getFenPosition() + " " + move);
+                this.waitUntilReady();
+            } else {
+                this.moveToFenPosition(startingPosition);
+                throw new IllegalArgumentException("Illegal move " + move +
+                        " from position " + this.getFenPosition());
+            }
+        }
+    }
+
+    public String moveToStartPosition() throws IOException,
+            InterruptedException {
+        this.process.writeCommand("position startpos");
+        this.waitUntilReady();
+        return this.getFenPosition();
+    }
+
+    public void moveToFenPosition(String fen) throws IOException,
+            InterruptedException {
+        this.process.writeCommand("position fen " + fen);
+        this.waitUntilReady();
     }
 
     public boolean healthCheck() {
@@ -72,6 +130,20 @@ public class Stockfish {
         }
         return true;
     }
+
+//    public static boolean isFenSyntaxValid(String fen) {
+//        Pattern regexPattern = Pattern.compile("\\s*^(((?:[rnbqkpRNBQKP1-8" +
+//                "]+\\/){7})[rnbqkpRNBQKP1-8]+)\\s([b|w])\\s(-|[K|Q|k|q]{1,
+//                4})" +
+//                "\\s(-|[a-h][1-8])\\s(\\d+\\s\\d+)$");
+//
+//        Matcher regexMatcher = regexPattern.matcher(fen);
+//        if (!regexMatcher.matches()) {
+//            return false;
+//        }
+//
+//
+//    }
 
     private void waitUntilReady() throws IOException, InterruptedException {
         this.process.writeCommand("isready");
